--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ h9{
 }
 .stocks2{
 	border-style:outset;
-	border-color:#E5E4E2;
+	background-repeat:no-repeat;
 	height:210px;
 	width:400px;
   background-image:url('https://i.pinimg.com/originals/b6/e6/0c/b6e60c232eea473eb8bce612ed569cd3.gif');
