--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ h9{
 	border-style:outset;
 	background-repeat:no-repeat;
 	height:210px;
-	width:400px;
+	width:400;
   background-image:url('https://i.pinimg.com/originals/b6/e6/0c/b6e60c232eea473eb8bce612ed569cd3.gif');
   background-size:400px 210px;
 	}
