--- a/style.css
+++ b/style.css
@@ -12,15 +12,18 @@ html { background-image:url("https://i.pinimg.com/originals/35/38/ed/3538edbdb53
 .containers{
  position:absolute;
   z-index:50;
-  width:100%;
-  height:150px;
+  width:100px;
+		 background-image:url("https://i.pinimg.com/originals/35/38/ed/3538edbdb531c7fe3bb387ead4b398b0.png");
+	  background-size:100px 100px;
+	  background-repeat:no-repeat;
+  height:100px;
   animation:moneytime 6s linear 1s infinite;
   -webkit-animation: moneytime 6s linear 1s infinite;/* Safari 4.0 - 8.0 */
 }
 /* Safari 4.0 - 8.0 */
 @-webkit-keyframes moneytime{
   from{
-    right:25%;
+    right:52%;
     
   }
   to{
@@ -30,13 +33,13 @@ html { background-image:url("https://i.pinimg.com/originals/35/38/ed/3538edbdb53
 }
 @keyframes moneytime{
   from{
-    right:25%;
+    right:52%;
     
   }
   to{
     right:110%;
   }
-}
+		  }
 .coverphoto{
 	background-image:url("https://i.pinimg.com/originals/52/83/fc/5283fcaf7ea8b04624111280bb3592e9.gif");
 	background-size:cover;
