--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ h9{
 }
 .stocks2{
 	border-style:outset;
-	background-image:url('https://i.pinimg.com/originals/b6/e6/0c/b6e60c232eea473eb8bce612ed569cd3.gif');
+	background-image:url('https://i.pinimg.com/564x/f7/1f/1d/f71f1d090a986b39d18a34ee0f491261.jpg');
         height:210px;
 	width:400;
 	background-size:400px 210px;
