--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ width:360px;
 	border-color:#E5E4E2;
 	height:210px;
 	width:400px;
-  background-image:url('https://i.pinimg.com/originals/04/69/77/046977bbd5b3678cbe301d60f1672bba.gif');
+  background-image:url('https://i.pinimg.com/564x/f7/34/b6/f734b6d1098919ca2833976460fb7f70.jpg');
   background-size:400px 210px;
 	}
 .health3{
