--- a/style.css
+++ b/style.css
@@ -3,7 +3,13 @@ html { background-image:url("https://i.pinimg.com/originals/35/38/ed/3538edbdb53
 		width:100%;
 	overflow:hidden;
 }
-
+.revolver{
+	position:absolute;
+	z-index:49;
+	width:100%;
+	height:110px;
+	overflow:hidden;
+}
 .containers{
  position:absolute;
   z-index:50;
