--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ h9{
 }
 .realestate{
 	border-style:outset;
-	background-image:url('https://i.pinimg.com/originals/d7/1d/b3/d71db35293a69caaa33bacd9f85d506e.gif');
+	background-image:url('https://i.pinimg.com/originals/a6/d7/17/a6d71720bce7097ac70ebf554adbd11d.png');
 	height:210px;
 	width:400;
 	background-size:400px 210px;
