--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ h9{
 }
 .realestate{
 	border-style:outset;
-	background-image:url('https://i.pinimg.com/originals/a6/d7/17/a6d71720bce7097ac70ebf554adbd11d.png');
+	background-image:url('https://i.pinimg.com/564x/02/36/81/023681931587111fdf43602ab3031221.jpg');
 	height:210px;
 	width:400;
 	background-size:400px 210px;
