--- a/style.css
+++ b/style.css
@@ -223,7 +223,7 @@ z-index:88;
 width:350px;
    height:700px;
 border-style:outset;
-overflow:hidden;
+overflow:scroll;
 background-color:rgba(225, 0, 0, .7);
 		  float:right;}
 
