--- a/style.css
+++ b/style.css
@@ -226,10 +226,12 @@ border-style:outset;
 overflow:scroll;
 background-color:rgba(225, 0, 0, .7);
 		  float:right;}
-
 body{
-	 width:1010px;
-	height:900px;
-	overflow:scroll;
-	
-}
+        overflow:scroll;   
+	 width:100%;
+	 height:100%;
+          z-index:-5;
+	 border-style:outset;
+	 
+           }
+
