--- a/style.css
+++ b/style.css
@@ -140,7 +140,13 @@ h9{
 	text-align:left;
 	color:#red;
 }
-
+  .nighttime{
+			  border-style:outset;
+			  font-size:20px;
+	width:900px;
+	height:600px;
+	overflow:scroll;
+		  }
 
 .clothed{
 		   height:550px;
