--- a/style.css
+++ b/style.css
@@ -79,10 +79,7 @@ width:360px;
 	width:100%; 
 	height:1100px;
 	padding-top:10%;
-         background-image:url('https://i.pinimg.com/564x/f1/f3/f6/f1f3f6597074e40e6d2d2b70d1e9c0d3.jpg');
-  background-repeat:no-repeat;
-	background-size:100% 1100px;
-  background-size:cover;
+        background-color:rgba(225, 0, 0, .7);
 	z-index:-5;
 border-style:outset;
 		  }
