--- a/style.css
+++ b/style.css
@@ -14,25 +14,40 @@ html { background-image:url("https://i.pinimg.com/originals/35/38/ed/3538edbdb53
 	opacity:.7;
 	background-size:750px 500px;
 }
-.slide{
-  width: 230px;
-  height: 350px;
-  overflow:hidden;
-  padding:0;
-  margin: 30px auto;
-  -webkit-box-shadow: 0 8px 6px -6px black;
-  -moz-box-shadow: 0 8px 6px -6px black;
-  -o-box-shadow: 0 8px 6px -6px black;
-  box-shadow: 0 8px 6px -6px black;
+ ul {
+       margin:0px;
+       padding:0px;
+       list-style: none;
+        
+    }
+ul li {
+     float: Left;
+    width:150px;
+        height:50px;
+    background-color:d3d3d3;
+    opacity:.8;
+    line-height: 50px;
+    text-align:center;
+    font-size:20px;
+    font-family: ariel;
+    margin-right: 7px;
+    }
+ul li a {
+    text-decoration: none;
+    color: red;
+    display: block;
 }
-.slide place{
-  display:block;
-  width:0;
-  float:left;
-  -webkit-transition: all 0.75s;
-  -moz-transition: all 0.75s;
-  transition: all 0.75s;
+ul li a:hover {
+    float:none;
+    background-color:aqua; 
+    }
+ul li ul li {
+    display: none;
 }
+ul li:hover ul li {
+    display: block;
+}
+
 #left-sidebar{
   float:left;
   width:430px;
