--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html { background-image:url("https://i.pinimg.com/originals/35/38/ed/3538edbdb531c7fe3bb387ead4b398b0.png");
-	height:1000px;
+	height:100%;
 		width:100%;
 	overflow:hidden;
 }
