--- a/style.css
+++ b/style.css
@@ -99,6 +99,47 @@ h9{
 		   background-repeat:no-repeat;
                    padding-bottom:25%;
 }
+
+
+
+  .neon
+{
+  position:absolute;
+  top:10%;
+  left:35%;
+	translate:transform (-50%,-50%);
+	margin:0;
+	padding:0 20px;
+	font-size:6em;
+	color:#34ccff;
+	text-shadow:0 0 20px;
+}
+
+
+.neon:after
+{
+	top:0;
+	left:0;
+	content:attr(data-text);
+	position:absolute;
+	padding:0 0 20px;
+	z-index:-1;
+	color:#34ccff;
+	filter:blur(15px);
+}
+
+.neon:before
+{
+	content:" ";
+	top:0;
+	left:0;
+	position:absolute;
+	background:#34ccff;
+	z-index:-3;
+	opacity:.5;
+	filter:blur(40px);
+}
+
 .withlove{
 	width:100%;
 	height:150px;
