--- a/style.css
+++ b/style.css
@@ -100,7 +100,45 @@ h9{
                    padding-bottom:25%;
 }
 
-
+.revolver{
+		position:absolute;
+	z-index:99;
+	width:100%;
+	height:110px;
+	overflow:hidden;	  
+	 }
+		  
+.containers{
+ position:absolute;
+  z-index:50;
+  width:100px;
+		 background-image:url("https://i.pinimg.com/originals/35/38/ed/3538edbdb531c7fe3bb387ead4b398b0.png");
+	  background-size:100px 100px;
+	  background-repeat:no-repeat;
+  height:100px;
+  animation:moneytime 6s linear 1s infinite;
+  -webkit-animation: moneytime 6s linear 1s infinite;/* Safari 4.0 - 8.0 */
+}
+/* Safari 4.0 - 8.0 */
+@-webkit-keyframes moneytime{
+  from{
+    right:52%;
+    
+  }
+  to{
+    right:110%;
+   
+  }
+}
+@keyframes moneytime{
+  from{
+    right:52%;
+    
+  }
+  to{
+    right:110%;
+  }
+		  }
 
   .neon
 {
