--- a/style.css
+++ b/style.css
@@ -31,6 +31,36 @@ width:360px;
 	height:600px;
 }
 
+.finances1:hover {
+    float:none;
+    background-color:aqua; 
+    }  
+
+.realestate:hover {
+    float:none;
+    background-color:aqua; 
+    }  
+
+.stocks2:hover {
+    float:none;
+    background-color:aqua; 
+    }  
+
+.loverboy:hover {
+    float:none;
+    background-color:aqua; 
+    }  
+
+.products4:hover {
+    float:none;
+    background-color:aqua; 
+    }  
+
+.health3:hover {
+    float:none;
+    background-color:aqua; 
+    }  
+
 .finances1{
 	border-style:outset;
 	border-color:#E5E4E2;
@@ -55,6 +85,32 @@ width:360px;
   background-image:url('https://i.pinimg.com/564x/5d/76/a0/5d76a093d187b1c899466faaff1a4dae.jpg');
   background-size:400px 210px;
 	}
+
+.loverboy{
+	border-style:outset;
+	background-image:url('https://i.pinimg.com/originals/4d/de/f1/4ddef18732b35ebab7372e1fbb01b8ce.gif');
+	height:210px;
+	width:400;
+	background-size:400px 210px;
+	background-repeat:no-repeat;
+}
+.stocks2{
+	border-style:outset;
+	background-image:url('https://i.pinimg.com/564x/f7/1f/1d/f71f1d090a986b39d18a34ee0f491261.jpg');
+        height:210px;
+	width:400;
+	background-size:400px 210px;
+	background-repeat:no-repeat;
+}
+.realestate{
+	border-style:outset;
+	background-image:url('https://i.pinimg.com/564x/ea/d2/09/ead20906331d848bed98634079004196.jpg');
+	height:210px;
+	width:400;
+	background-size:400px 210px;
+	background-repeat:no-repeat;
+}
+
 .border5{
 	
 	width:100%; 
@@ -180,30 +236,7 @@ h9{
 	width:100%;
 	height:150px;
 }
-.loverboy{
-	border-style:outset;
-	background-image:url('https://i.pinimg.com/originals/4d/de/f1/4ddef18732b35ebab7372e1fbb01b8ce.gif');
-	height:210px;
-	width:400;
-	background-size:400px 210px;
-	background-repeat:no-repeat;
-}
-.stocks2{
-	border-style:outset;
-	background-image:url('https://i.pinimg.com/564x/f7/1f/1d/f71f1d090a986b39d18a34ee0f491261.jpg');
-        height:210px;
-	width:400;
-	background-size:400px 210px;
-	background-repeat:no-repeat;
-}
-.realestate{
-	border-style:outset;
-	background-image:url('https://i.pinimg.com/564x/ea/d2/09/ead20906331d848bed98634079004196.jpg');
-	height:210px;
-	width:400;
-	background-size:400px 210px;
-	background-repeat:no-repeat;
-}
+
 
 		   ul {
        margin:0px;
