--- a/style.css
+++ b/style.css
@@ -203,16 +203,15 @@ h9{
 {
   position:absolute;
   top:10%;
-  left:35%;
+  left:25%;
+	z-index:78;
 	translate:transform (-50%,-50%);
 	margin:0;
 	padding:0 20px;
-	font-size:6em;
+	font-size:50px;
 	color:#34ccff;
 	text-shadow:0 0 20px;
 }
-
-
 .neon:after
 {
 	top:0;
@@ -220,11 +219,10 @@ h9{
 	content:attr(data-text);
 	position:absolute;
 	padding:0 0 20px;
-	z-index:-1;
+	z-index:75;
 	color:#34ccff;
 	filter:blur(15px);
 }
-
 .neon:before
 {
 	content:" ";
@@ -232,7 +230,7 @@ h9{
 	left:0;
 	position:absolute;
 	background:#34ccff;
-	z-index:-3;
+	z-index:73;
 	opacity:.5;
 	filter:blur(40px);
 }
