--- a/style.css
+++ b/style.css
@@ -285,7 +285,7 @@ ul li:hover ul li {
 
 body{
         overflow:scroll;   
-	 width:950px;
+	 width:100%;
 	 height:100%;
           z-index:-5;
 	 border-style:outset;
