--- a/style.css
+++ b/style.css
@@ -108,6 +108,8 @@ width:360px;
 	height:1070px;
 	padding-top:10%;
         background-image:url('https://i.pinimg.com/originals/1a/6b/d5/1a6bd53b897b920d9ba5132a8cccbcb4.gif');
+	 background-size:100% 1070px;
+		   background-repeat:no-repeat;
 	z-index:-5;
 border-style:outset;
 		  }
