--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ width:360px;
     }  
 
 .finances1{
+	position:relative;
 	border-radius:50px;
 	border-style:outset;
 	border-color:aqua;
@@ -70,6 +71,7 @@ width:360px;
  background-color:rgba(255, 105, 180, .7);
 	}
 .health3{
+	position:relative;
 	border-radius:50px;
 	border-style:outset;
 	border-color:aqua;
@@ -78,6 +80,7 @@ width:360px;
   background-color:rgba(255, 105, 180, .7); 
 	}
 .products4{
+	position:relative;
 	border-radius:50px;
 	border-style:outset;
 	border-color:aqua;
@@ -87,6 +90,7 @@ width:360px;
 	}
 
 .loverboy{
+	position:relative;
 	border-radius:50px;
 	border-color:aqua;
 	border-style:outset;
@@ -95,6 +99,7 @@ width:360px;
 	background-color:rgba(255, 105, 180, .7);
 }
 .stocks2{
+	position:relative;
 	border-radius:50px;
 	border-color:aqua;
 	border-style:outset;
@@ -103,6 +108,7 @@ width:360px;
 	background-color:rgba(255, 105, 180, .7);
 }
 .realestate{
+	position:relative;
 	border-radius:50px;
 	border-color:aqua;
 	border-style:outset;
