--- a/style.css
+++ b/style.css
@@ -25,7 +25,10 @@ html { background-image:url("https://i.pinimg.com/originals/35/38/ed/3538edbdb53
   width:401px;
 	
 }
-
+.membership{
+width:60px;
+	height:60px;
+}
 .membershiparea{
 width:360px;
 	height:600px;
