--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-html { background-image:url("https://i.pinimg.com/originals/35/38/ed/3538edbdb531c7fe3bb387ead4b398b0.png");
+html { background-color:rgb(0,0,0);
 	height:100%;
 		width:100%;
 	overflow:hidden;
@@ -36,39 +36,33 @@ width:360px;
 }
 
 .finances1:hover {
-	position:relative;
-    float:none;
-    background-color:aqua; 
+	position:absolute;
+    background-color:rgba(255, 105, 180, .7); 
     }  
 
 .realestate:hover {
-	position:relative;
-    float:none;
-    background-color:aqua; 
+	position:absolute;
+    background-color:rgba(255, 105, 180, .7); 
     }  
 
 .stocks2:hover {
-	position:relative;
-    float:none;
-    background-color:aqua; 
+	position:absolute;
+    background-color:rgba(255, 105, 180, .7); 
     }  
 
 .loverboy:hover {
-	position:relative;
-    float:none;
-    background-color:aqua; 
+	position:absolute;
+    background-color:rgba(255, 105, 180, .7); 
     }  
 
 .products4:hover {
-	position:relative;
-    float:none;
-    background-color:aqua; 
+	position:absolute;
+    background-color:rgba(255, 105, 180, .7); 
     }  
 
 .health3:hover {
-	position:relative;
-    float:none;
-    background-color:aqua; 
+	position:absolute;
+    background-color:rgba(255, 105, 180, .7); 
     }  
 
 .finances1{
@@ -78,7 +72,6 @@ width:360px;
 	border-color:aqua;
 	height:210px;
 	width:400px;
- background-color:rgba(255, 105, 180, .7);
 	float:left;
 	}
 .health3{
@@ -88,7 +81,6 @@ width:360px;
 	border-color:aqua;
 	height:210px;
 	width:400px;
-  background-color:rgba(255, 105, 180, .7); 
 	float:left;
 	}
 .products4{
@@ -98,7 +90,6 @@ width:360px;
 	border-color:aqua;
 	height:210px;
 	width:400px;
-  background-color:rgba(255, 105, 180, .7);
 	float:left;
 	}
 
@@ -109,7 +100,6 @@ width:360px;
 	border-style:outset;
 	height:210px;
 	width:400px;
-	background-color:rgba(255, 105, 180, .7);
 	float:left;
 }
 .stocks2{
@@ -119,7 +109,6 @@ width:360px;
 	border-style:outset;
         height:210px;
 	width:400px;
-	background-color:rgba(255, 105, 180, .7);
 	float:left;
 }
 .realestate{
@@ -129,7 +118,6 @@ width:360px;
 	border-style:outset;
 	height:210px;
 	width:400px;
-	background-color:rgba(255, 105, 180, .7);
 	float:left;
 }
 
@@ -143,9 +131,9 @@ width:360px;
 	padding-top:10%;
 	overflow:scroll;
 	width:800px; 
-	height:750px;
-        background-image:url('https://i.pinimg.com/originals/ef/49/1d/ef491da080490431059aa289a2051e7f.gif');
-	 background-size:800px 750px;
+	height:550px;
+        background-image:url('https://i.pinimg.com/originals/37/98/26/37982696da872738270b8435371ffaf4.gif');
+	 background-size:800px 550px;
 		   background-repeat:no-repeat;
 	z-index:-5;
 border-style:outset;
@@ -311,9 +299,6 @@ body{
         overflow:scroll;   
 	 width:100%;
 	 height:100%;
-          z-index:-5;
-	 border-style:outset;
-	float:left;
 	 
            }
 
