--- a/style.css
+++ b/style.css
@@ -134,10 +134,10 @@ width:360px;
 .border5{
 	padding-top:10%;
 	overflow:scroll;
-	width:800px; 
+	width:100%; 
 	height:550px;
         background-image:url('https://i.pinimg.com/originals/37/98/26/37982696da872738270b8435371ffaf4.gif');
-	 background-size:800px 550px;
+	 background-size:100% 550px;
 		   background-repeat:no-repeat;
 	z-index:-5;
 
