--- a/style.css
+++ b/style.css
@@ -271,8 +271,6 @@ h9{
     }
 ul li {
      
-    
-    background-color:d3d3d3;
     line-height: 50px;
     text-align:center;
     font-size:20px;
@@ -281,7 +279,7 @@ ul li {
     }
 ul li a {
     text-decoration: none;
-    color: red;
+    color: #34ccff;
     display: block;
    width:450px;
   height:150px;
@@ -290,7 +288,7 @@ ul li a {
 }
 ul li a:hover {
     float:none;
-    background-color:aqua; 
+    background-color:rgba(255, 105, 180, .7); 
     }
 ul li ul li {
     display: block;
