--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html { background-color:black;
 		   borderstyle:outset;
 	width:100px;
 	height:100px;
-	background-image:url('https://i.pinimg.com/564x/35/38/ed/3538edbdb531c7fe3bb387ead4b398b0.jpg');
+	background-image:url('https://i.pinimg.com/originals/35/38/ed/3538edbdb531c7fe3bb387ead4b398b0.png');
 	background-size:100px 100px;
 	
 		   }
@@ -193,9 +193,6 @@ h9{
  position:absolute;
   z-index:50;
   width:100px;
-		 background-image:url("https://i.pinimg.com/originals/35/38/ed/3538edbdb531c7fe3bb387ead4b398b0.png");
-	  background-size:100px 100px;
-	  background-repeat:no-repeat;
   height:100px;
   animation:moneytime 6s linear 1s infinite;
   -webkit-animation: moneytime 6s linear 1s infinite;/* Safari 4.0 - 8.0 */
