--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ width:60px;
 	overflow:hidden;
 	width:3690px; 
 	height:220px;
+	background-color:rgba(161, 202, 241 .7);
 		  }
 h3{
   color:rgb(255,0,0);
