--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ width:60px;
 	overflow:scroll;
 	width:420px; 
 	height:450px;
-        background-color:rgba(161, 202, 241 .7);
+        background-color:rgba(161, 202, 241, .7);
 	border-style:outset;
        border-radius:50px;
 		  }
