--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
  width:100%;
   height:550px;
  background-repeat:no-repeat;
- background-image:url('https://i.pinimg.com/originals/35/38/ed/3538edbdb531c7fe3bb387ead4b398b0.png');
+ background-image:url('https://i.pinimg.com/originals/32/39/bb/3239bb3b2c0390b01c4613fd3148f706.gif');
 	background-size:100% 550px;
 }
 /* Safari 4.0 - 8.0 */
