--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
   
 }
 
-html { background-color:black;
+html {  background-color:rgb(229, 228, 226);
 	height:100%;
 		width:100%;
 	overflow:hidden;
