--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ width:360px;
 	position:relative;
 	border-radius:50px;
         height:210px;
-	width:400px;
+	width:500px;
 	float:left;
 }
 
@@ -159,8 +159,8 @@ h9{
 	translate:transform (-50%,-50%);
 	margin:0;
 	padding:0 20px;
-	font-size:50px;
-	color:#34ccff;
+	font-size:70px;
+	color:rgb(255,0,0);
 	text-shadow:0 0 20px;
 }
 .neon:after
@@ -171,7 +171,7 @@ h9{
 	position:absolute;
 	padding:0 0 20px;
 	z-index:75;
-	color:#34ccff;
+	color:rgb(255,0,0);
 	filter:blur(15px);
 }
 .neon:before
@@ -180,7 +180,7 @@ h9{
 	top:0;
 	left:0;
 	position:absolute;
-	background:#34ccff;
+	background:rgb(255,0,0);
 	z-index:73;
 	opacity:.5;
 	filter:blur(40px);
