--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
 .lamborghini{
  width:100%;
   height:550px;
- background-repeat:no-repeat;
- background-image:url('https://i.pinimg.com/originals/a9/6e/a1/a96ea1a83eb1b60e6323e6338e8d36c9.gif');
-	background-size:100% 550px;
+background-color:rgba(161, 202, 241, .7);
 }
 /* Safari 4.0 - 8.0 */
 @-webkit-keyframes cmoney{
