--- a/style.css
+++ b/style.css
@@ -19,6 +19,40 @@
   
 }
 
+.lamborghini2{
+	 borderstyle:outset;
+ width:100%;
+  height:100px;
+  padding-top:7px;
+	position:relative;
+	background-color:rgba(0, 255, 255, .6);
+}
+
+
+.lamborghini3{
+ width:250px;
+  height:100px;
+	background-blur:5px;
+	border-radius:50%;
+	position:relative;
+	background-color:rgba(0, 255, 255, .4);
+  animation:nocap 3s linear 1 infinite alternate;
+@-webkit-animation:nocap 3s linear 1 infinite alternate;
+}
+/* Safari 4.0 - 8.0 */
+@-webkit-keyframes nocap{
+   0% {left:5%;}
+     
+	100% {left:100%;}
+  
+}
+@keyframes  nocap{
+  0% {left:5%;}
+     
+	100% {left:100%;}
+  
+}
+
 html {  background-color:rgb(245,245,220);
 	height:100%;
 		width:100%;
