--- a/style.css
+++ b/style.css
@@ -32,10 +32,10 @@
 .lamborghini3{
  width:250px;
   height:100px;
-	background-blur:5px;
+	filter:blur(25px);
 	border-radius:50%;
 	position:relative;
-	background-color:rgba(0, 255, 255, .4);
+	background-color:#ff2800;
   animation:nocap 3s linear 1 infinite alternate;
 @-webkit-animation:nocap 3s linear 1 infinite alternate;
 }
