--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
 	 borderstyle:outset;
  width:100%;
   height:100px;
-  padding-top:7px;
+  z-index:9;
 	position:relative;
 	background-color:rgba(0, 255, 255, .6);
 }
@@ -32,6 +32,7 @@
 .lamborghini3{
  width:250px;
   height:100px;
+	 z-index:9;
 	filter:blur(25px);
 	border-radius:50%;
 	position:absolute;
@@ -102,6 +103,7 @@ width:360px;
 	translate:transform (-50%,-50%);
     }  
 .border5{
+	 z-index:99;
 	position:absolute;
 	overflow:scroll;
 	width:500px; 
@@ -132,16 +134,6 @@ h9{
 	font-size:20px;
 	text-align:left;
 	color:#red;
-}
- 
-
-.clothed{
-		   height:550px;
-		   width:600px;
-		   background-image:url('https://i.pinimg.com/originals/a7/a5/96/a7a59632f36880d78e0940112f341a1f.jpg');
-		   background-size:600px 550px;
-		   background-repeat:no-repeat;
-                   padding-bottom:25%;
 }
 
 .revolver{
