--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
  width:100%;
   height:100px;
   z-index:9;
-	position:relative;
+	position:absolute;
 	background-color:rgba(0, 255, 255, .6);
 }
 
