--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
  width:100%;
   height:100px;
   z-index:9;
-	position:absolute;
+	position:relative;
 	background-color:rgba(0, 255, 255, .6);
 }
 
@@ -66,7 +66,7 @@ html {  background-color:rgb(245,245,220);
 	height:100px;
 	background-image:url('https://i.pinimg.com/originals/35/38/ed/3538edbdb531c7fe3bb387ead4b398b0.png');
 	background-size:100px 100px;
-	
+	 z-index:55;
 		   }
 
 
