--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
  width:100%;
   height:550px;
   padding-top:7px;
+	background-image:url('https://i.pinimg.com/originals/ee/26/20/ee2620dd475b18fc0f0d9cbe3d7a31d3.jpg');
+	background-size:100px 550px;
 }
 /* Safari 4.0 - 8.0 */
 @-webkit-keyframes cmoney{
@@ -23,7 +25,7 @@
 	 borderstyle:outset;
  width:100%;
   height:100px;
-  z-index:9;
+  z-index:9999;
 	position:relative;
 	background-color:rgba(0, 255, 255, .6);
 }
@@ -32,10 +34,10 @@
 .lamborghini3{
  width:250px;
   height:100px;
-	 z-index:10;
+	 z-index:9999;
 	filter:blur(25px);
 	border-radius:50%;
-	position:absolute;
+	position:relative;
 	background-color:#ff2800;
   animation:nocap 3s linear infinite alternate;
 -webkit-animation:nocap 3s linear infinite alternate;
