--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 .lamborghini{
  width:100%;
-  height:550px;
+  height:650px;
   padding-top:7px;
 	background-image:url('https://i.pinimg.com/originals/ee/26/20/ee2620dd475b18fc0f0d9cbe3d7a31d3.jpg');
-	background-size:100px 550px;
+	background-size:100% 650px;
+	background-repeat:no-repeat;
 }
 /* Safari 4.0 - 8.0 */
 @-webkit-keyframes cmoney{
