--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ width:360px;
     }  
 .border5{
 	 z-index:99;
-	position:absolute;
+	position:relative;
 	overflow:scroll;
 	width:500px; 
 	height:500px;
