--- a/style.css
+++ b/style.css
@@ -157,19 +157,18 @@ h9{
 
   .neon
 {
-  position:absolute;
+		float:left;
+ position:absolute;
   top:10%;
 	z-index:78;
 	translate:transform (-50%,-50%);
-	
-	
 	font-size:50px;
 	color:rgb(255,0,0);
 	text-shadow:0 0 20px;
 }
 .neon:after
 {
-	
+	float:left;
 	content:attr(data-text);
 	position:absolute;
 	translate:transform (-50%,-50%);
