--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@ width:360px;
 
 .stocks1{
 	border-color:rgb(255, 255, 255);
+	background-color:rgb(229, 228, 226);
         z-index:99;
 	position:relative;
 	border-radius:50px;
@@ -104,6 +105,7 @@ width:360px;
 
 .stocks2{
 	border-color:rgb(255, 255, 255);
+	background-color:rgb(229, 228, 226);
 	z-index:99;
 	position:relative;
 	border-radius:50px;
@@ -117,6 +119,7 @@ width:360px;
 
 .stocks3{
 	border-color:rgb(255, 255, 255);
+	background-color:rgb(229, 228, 226);
 	z-index:99;
 	position:relative;
 	border-radius:50px;
@@ -177,7 +180,7 @@ h9{
 	z-index:78;
 	font-weight: bold;
 	font-size:50px;
-	color:rgb(255,0,0);
+	color:rgb(0,255,255);
 	text-shadow:0 0 20px;
 }
 
