--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@
   
 }
 
-html {  background-color:rgb(0,0,0);
+html {  background-color:rgba(0,255,255,.5);
 	height:100%;
 		width:100%;
 	overflow:hidden;
