--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 .lamborghini{
- width:750px;
-  height:650px;
+ width:730px;
+  height:800px;
   overflow:scroll;
-	background-image:url('https://i.pinimg.com/originals/65/a4/af/65a4aff712f9b9551a75cac733fc1afa.jpg');
+	background-image:url('https://i.pinimg.com/originals/8b/47/fd/8b47fd221421221e6a0c3cc291ad320d.png');
 	background-size:750px 650px;
 	background-repeat:no-repeat;
 }
