--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 .lamborghini{
- width:730px;
-  height:800px;
+ width:750px;
+  height:650px;
   overflow:scroll;
-	background-image:url('https://i.pinimg.com/originals/8b/47/fd/8b47fd221421221e6a0c3cc291ad320d.png');
+	background-image:url('https://i.pinimg.com/originals/d5/e4/f6/d5e4f6c2cb0076956efa3b28a3ce2800.gif');
 	background-size:750px 650px;
 	background-repeat:no-repeat;
 }
