--- a/style.css
+++ b/style.css
@@ -2,10 +2,20 @@
  width:750px;
   height:650px;
   overflow:scroll;
+background-color:rgba(0,255,0,.5)
+}
+
+
+.lamborghiniveneno{
+ width:750px;
+  height:650px;
+  overflow:scroll;
 	background-image:url('https://i.pinimg.com/originals/d5/e4/f6/d5e4f6c2cb0076956efa3b28a3ce2800.gif');
 	background-size:750px 650px;
 	background-repeat:no-repeat;
 }
+
+
 /* Safari 4.0 - 8.0 */
 @-webkit-keyframes cmoney{
   0% { top:-650px;}
@@ -56,7 +66,7 @@
   
 }
 
-html {  background-color:rgba(0,255,255,.5);
+html {  background-color:rgba(0,0,0,.5);
 	height:100%;
 		width:100%;
 	overflow:hidden;
