--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ background-color:rgba(0,255,255,.6);
 	background-image:url('https://i.pinimg.com/originals/35/51/98/355198883f77a4ca252e4718557850b9.jpg');
 	background-size:500px 500px;
 	background-repeat:no-repeat;
+	border-radius:50%;
+	border-color:rgb(255,0,0);
 }
 
 
