--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
  width:750px;
   height:650px;
   overflow:scroll;
-background-color:rgba(0,255,255,.6);
+background-image:url('https://i.pinimg.com/originals/fc/8b/e8/fc8be844a749f39c665809dc6d371195.jpg');
 	border-radius:50px;
 	border-color:rgb(0,255,255);
 	border-style:inset;
