--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 .lamborghini{
  width:750px;
-  height:650px;
-  overflow:scroll;
+  height:680px;
+  overflow:hidden;
 background-image:url('https://i.pinimg.com/originals/fc/8b/e8/fc8be844a749f39c665809dc6d371195.jpg');
-	border-radius:50px;
+	background-size:750px 680px;
+background-repeat:no-repeat;
+border-radius:50px;
 	border-color:rgb(0,255,255);
 	border-style:inset;
 }
