--- a/style.css
+++ b/style.css
@@ -207,3 +207,15 @@ body{
 	 		
 
            }
+.love2{ 
+position:relative;
+z-index:2;
+	  border-radius:40px;
+	          overflow:scroll;   
+	border-style:inset;
+  height:900px;
+  width:600px;
+
+background-color:rgb(0,255,255);
+border-color:rgb(0,255,255);
+}
