--- a/style.css
+++ b/style.css
@@ -24,7 +24,20 @@ margin-top:300px;
    
   
 }
-
+	   .thorshammer{		  
+z-index:999;
+		  position:absolute;	
+width:75px;
+   height:75px;
+background-color:rgb(222,137,240);
+float:left;
+background-image:url('https://i.pinimg.com/originals/32/e3/b5/32e3b500464be6825895808149cc1ae6.png');
+	background-size:75px 75px;
+	background-repeat:no-repeat;
+	border-radius:50%;
+	border-color:rgb(0,255,255);
+	border-style:outset;
+		   } 
 	   .border6{
 	overflow:scroll;
 	width:580px; 
