--- a/style.css
+++ b/style.css
@@ -100,7 +100,8 @@ width:360px;
 	border-radius:50px;
         height:100px;
 	width:350px;
-	float:left;
+	top:360px;
+	left:300px;
 	border-style:outset;
 	animation:cmoney 1s ;
         -webkit-animation: cmoney 1s ;/* Safari 4.0 - 8.0 */
@@ -114,7 +115,8 @@ width:360px;
 	border-radius:50px;
         height:100px;
 	width:350px;
-	float:left;
+top:760px;
+	left:600px;
 	border-style:outset;
 	animation:cmoney 2s ;
         -webkit-animation: cmoney 2s ;/* Safari 4.0 - 8.0 */
@@ -128,7 +130,8 @@ width:360px;
 	border-radius:50px;
         height:100px;
 	width:350px;
-	float:left;
+	top:1060px;
+	left:500px;
 	border-style:outset;
 	animation:cmoney 3s ;
         -webkit-animation: cmoney 3s ;/* Safari 4.0 - 8.0 */
