--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ position:absolute;
 background-size:500px 270px;	  
 	background-repeat:no-repeat;
 background-image:url("https://i.pinimg.com/originals/5a/d8/13/5ad813ab842ef0eccd20b21e8cfa3a1b.png");
-width:500px;
-height:265px;
+width:550px;
+height:275px;
  z-index:3;
 animation:planeflying 7s  ;
 -webkit-animation:planeflying 7s  ;
@@ -96,12 +96,12 @@ width:360px;
 	border-color:rgb(255, 255, 255);
 	background-color:rgb(0, 0, 0);
         z-index:99;
-	position:relative;
+	position:absolute;
 	border-radius:50px;
         height:100px;
 	width:350px;
-	top:360px;
-	right:75%;
+	top:420px;
+	right:5%;
 	border-style:outset;
 	animation:cmoney 1s ;
         -webkit-animation: cmoney 1s ;/* Safari 4.0 - 8.0 */
@@ -111,7 +111,7 @@ width:360px;
 	border-color:rgb(255, 255, 255);
 	background-color:rgb(0, 0, 0);
 	z-index:99;
-	position:relative;
+	position:absolute;
 	border-radius:50px;
         height:100px;
 	width:350px;
@@ -126,12 +126,12 @@ top:760px;
 	border-color:rgb(255, 255, 255);
 	background-color:rgb(0, 0, 0);
 	z-index:99;
-	position:relative;
+	position:absolute;
 	border-radius:50px;
         height:100px;
 	width:350px;
 	top:1060px;
-	left:70%;
+	left:56%;
 	border-style:outset;
 	animation:cmoney 3s ;
         -webkit-animation: cmoney 3s ;/* Safari 4.0 - 8.0 */
