--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ top:760px;
 	border-radius:50px;
         height:100px;
 	width:350px;
-	top:1060px;
+	top:85%;
 	left:56%;
 	border-style:outset;
 	animation:cmoney 3s ;
